force-app/main/default/objects/Metro2__c/Metro2__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Metro2</label>
</CustomObject>