force-app/main/default/objects/Metro2__c/fields/EquiFaxIdentifier__c.field-meta.xml
<CustomField>
    <fullName>EquiFaxIdentifier__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>EquiFaxIdentifier</label>
    <length>7</length>
    <type>Text</type>
</CustomField>