force-app/main/default/objects/Metro2__c/fields/HEADER__c.field-meta.xml
<CustomField>
    <fullName>HEADER__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>HEADER</label>
    <length>6</length>
    <type>Text</type>
</CustomField>