force-app/main/default/objects/Metro2__c/fields/MaxRowsCount__c.field-meta.xml
<CustomField>
    <fullName>MaxRowsCount__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>MaxRowsCount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>