force-app/main/default/objects/Metro2__c/fields/ZAP__c.field-meta.xml
<CustomField>
    <fullName>ZAP__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ZAP</label>
    <length>3</length>
    <type>Text</type>
</CustomField>